# uteki.open

./: .cursorrules  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml  start.sh  test_main.py  test_models.sh
backend/alembic/versions/: 20260308_0100_llm_backtest_tables.py
backend/logs/: .gitkeep  README.md
backend/scripts/: fetch_kline.py  migrate_news_from_uchu.py  persist_bloomberg_news.py  test_bloomberg_apify.py
backend/tests/: test_agent_skills.py
backend/uteki/: main.py  main_dev.py
backend/uteki/common/: config.py  database.py  logging_config.py
backend/uteki/domains/admin/: api.py
backend/uteki/domains/agent/: api.py  llm_adapter.py  service.py
backend/uteki/domains/agent/core/: context.py
backend/uteki/domains/agent/research/: orchestrator.py  search_engine.py  web_scraper.py
backend/uteki/domains/company/: skill_runner.py  skills.py
backend/uteki/domains/data/: api.py  ingestion_service.py  models.py  seed_sp500_nasdaq100.py  udf_api.py
backend/uteki/domains/data/providers/: base.py  tushare_provider.py  yfinance_provider.py
backend/uteki/domains/index/: api.py  schemas.py
backend/uteki/domains/index/services/: arena_service.py  data_service.py  harness_builder.py  llm_backtest_service.py  prompt_service.py  scheduler_service.py
backend/uteki/domains/index/tools/: index_tools.py
backend/uteki/domains/news/: api.py  bloomberg_api.py
backend/uteki/domains/news/models/: news_article.py
backend/uteki/domains/news/services/: __init__.py  bloomberg_apify.py  bloomberg_service.py  cnbc_scraper.py  jeff_cox_service.py  news_analysis_service.py  translation_service.py
backend/uteki/schedulers/: news_scheduler.py
backend/uteki/scripts/: backtest_collect.py  init_db.py
docs/: AGENT_BREAKTHROUGHS.md
frontend/: .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  client.ts  index.ts  news.ts
frontend/src/components/: ArticleDetailDialog.tsx  ChatMessage.tsx  HoverSidebar.tsx  Layout.tsx  Toast.tsx
frontend/src/components/company/: AnalysisRecordCard.tsx  CompanyAnalysisForm.tsx  FormattedText.tsx  GateProgressTracker.tsx  GateSkeletonCard.tsx  GateSummaryCard.tsx  ReportPanel.tsx  ThinkingTimeline.tsx  VerdictBanner.tsx  ui.tsx
frontend/src/components/dashboard/: AgentActivity.tsx  ModelLeaderboard.tsx  PerformanceChart.tsx  PortfolioSummary.tsx  QuickStats.tsx  RecentDecisions.tsx
frontend/src/components/hub/: AgentCard.tsx
frontend/src/components/index/: ArenaTimelineChart.tsx  ArenaView.tsx  KlineChart.tsx  LLMBacktestPanel.tsx  SettingsPanel.tsx
frontend/src/components/news/: NewsLabelBadges.tsx
frontend/src/contexts/: SidebarContext.tsx
frontend/src/data/: mockDashboard.ts
frontend/src/hooks/: useAdmin.ts  useAuth.tsx
frontend/src/pages/: AdminPage.tsx  AgentChatPage.tsx  ColorDemoPage.tsx  CompanyAgentPage.tsx  DemoPage.tsx  IndexAgentDemoPage.tsx  IndexAgentPage.tsx  IndexVotingDemoPage.tsx  LoginPage.tsx  ModelSelectorDemoPage.tsx  NewsTimelinePage.tsx  ReflectionDemoPage.tsx  VotingDemoPage.tsx
frontend/src/stores/: companyTaskStore.ts
frontend/src/theme/: ThemeProvider.tsx  colors.ts  muiTheme.ts
frontend/src/types/: admin.ts  news.ts
openspec/changes/arena-timeline-chart-layout/: design.md  proposal.md  tasks.md
openspec/changes/bloomberg-bond-news-apify/: design.md  proposal.md  tasks.md
openspec/changes/migrate-news-fomc-pages/: design.md  proposal.md  tasks.md
openspec/changes/news-timeline-ui-redesign/: design.md  proposal.md  tasks.md
openspec/changes/watchlist-kline-chart/: design.md  proposal.md  tasks.md
scripts/: init-clickhouse.sql  init-postgres.sql
(+45 files in other folders)
