[tool.poetry]
name = "uteki"
version = "0.1.0"
description = "Open-source AI-powered quantitative trading platform"
authors = ["uteki team"]
readme = "README.md"
packages = [{include = "uteki"}]

[tool.poetry.dependencies]
python = "^3.10"
# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
greenlet = "^3.0.0"  # Required for SQLAlchemy async
aiosqlite = "^0.20.0"  # SQLite async driver (开发环境)
asyncpg = "^0.29.0"  # PostgreSQL async driver (生产环境)
clickhouse-driver = "^0.2.7"
redis = {extras = ["hiredis"], version = "^5.0.0"}
# LLM SDKs (optional extras)
openai = {version = "^1.50.0", optional = true}
anthropic = {version = "^0.37.0", optional = true}
dashscope = {version = "^1.17.0", optional = true}  # Qwen
google-generativeai = {version = "^0.8.0", optional = true}  # Gemini
google-api-python-client = {version = "^2.150.0", optional = true}  # Google Custom Search
# Exchange SDKs
ccxt = "^4.3.0"
ib-insync = "^0.9.86"  # Interactive Brokers (雪盈)
# Data processing
pandas = "^2.2.0"
numpy = "^1.26.0"
ta-lib = {version = "^0.4.32", optional = true}  # Technical analysis
# Vector database
qdrant-client = "^1.11.0"
# Object storage
minio = "^7.2.0"
# Utilities
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"
aiofiles = "^24.1.0"
# Web research
ddgs = "^9.10.0"  # DuckDuckGo search (formerly duckduckgo-search)
beautifulsoup4 = "^4.12.0"
trafilatura = "^1.12.0"
# Task scheduling
apscheduler = "^3.10.4"
# Monitoring
prometheus-client = "^0.20.0"
email-validator = "^2.3.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
# Linting & Formatting
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
# Type stubs
types-redis = "^4.6.0"
types-aiofiles = "^24.1.0"

[tool.poetry.extras]
llm-full = ["openai", "anthropic", "dashscope", "google-generativeai"]
research = ["google-api-python-client"]
analysis = ["ta-lib"]
all = ["openai", "anthropic", "dashscope", "google-generativeai", "google-api-python-client", "ta-lib"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=uteki --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["uteki"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
